  reports the values column in a way gnuplot can consume, and -J
  reports the totals column.  An example can be found in
  scripts/report.

- New "-y DATEFMT" options will change the date format used throughout
  ledger.  The default is "%Y/%m/%d".

- New -Y and -W options prints yearly and weekly subtotals, just as
  the -M option printed monthly subtotals in the previous version.

- New "-z INTERVAL" allows for more flexible interval reporting.  The
  sublanguage used will probably mature over time, but for now it
  supports expression like:

    monthly
    every week
    every 3 quarters
    weekly from 12/20

  Note that when using the "from" date, this does not constrain the
  report.  It is only used for aligning report dates, for example if
  you wish weekly reporting to start on Sundays.

- Regexps specified after the command name now apply to account names
  only.  To search on a payee, use "--" to separate the two kinds of
  regexps.  For example, to find a payee named "John" within all
  Expenses accounts, use:

    ledger register expenses -- john

  FYI: The above command is identical (and internally converted) to:

    ledger -l "/expenses/|//john/" register
  
- To include entries from a file into a specific account, use:

    @ ACCOUNT
    !include FILE
    @@

  All entries specified within the "@ ACCOUNT/@@" range will be added
  under that account.

- Register reports now show the account being changed.  Use the -r
  option to see "other accounts" -- or the account the credit/debit
  came from.  (This was the old behavior in 1.x, but can lead to
  confusing reports when viewing accounts with subaccounts.)  The -r
  option also works for balance reports, where it will show all the
  account totals related to your query.

- There are several new default reporting styles, which work both in
  the balance and register reports:

    -O  Show base values (this is the default, and old behavior)
    -B  Show the basis cost of commodities